--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@stripe/stripe-js": "^8.4.0",
     "@tanstack/react-query": "^5.62.11",
     "@trpc/client": "^11.0.0",
@@ -41,6 +42,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.1.1",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76",
